# agiwo

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEW_DESIGN.md  PR84.md  README.md  SCHEDULER_DESIGN.md  agent-config-refactor-plan.md  agent-construction-refactor.md  code_review_summary.md  console_impl_simplify_review.md  pyproject.toml  refactoring-proposal.md  review-0203.md  review-kimi.md  review.md  review_code.md  review_code_solution.md  review_confirm.md  test_real_agent.py  test_real_api.py  todos.md
console/: .env.example  .env.example.full  Dockerfile  README.md  pyproject.toml  seed_agents.py  start.sh
console/docker/: entrypoint.sh  healthcheck.sh  nginx.conf
console/server/: README.md  app.py  cli.py  config.py  dependencies.py  docker_runtime.py  response_serialization.py  schemas.py  tools.py
console/server/channels/: README.md  __init__.py  agent_executor.py  agent_runtime.py  base.py  batch_manager.py  deferred_reply.py  exceptions.py  models.py  runtime_agent_pool.py  scheduler_session_bridge.py  session_binding.py  session_context_service.py  session_manager.py  utils.py  web_consent_notifier.py
console/server/channels/feishu/: README.md  __init__.py  api_client.py  attachment_resolver.py  card_action_handler.py  connection.py  consent_notifier.py  content_extractor.py  dedup_store.py  delivery_service.py  factory.py  group_history_store.py  inbound_envelope.py  inbound_handler.py  memory_store.py  message_builder.py  message_parser.py  sdk_adapter.py  sender_resolver.py  service.py  sqlite_store.py  store.py
console/server/channels/feishu/commands/: __init__.py  base.py  context.py  post_builder.py  scheduler.py  session.py  status_text.py
console/server/channels/feishu/store/: __init__.py  memory.py  migrations.py  sqlite.py
console/server/channels/session/: __init__.py  binding.py  context_service.py  manager.py  models.py
console/server/domain/: __init__.py  agent_configs.py  remote_workspace.py  run_metrics.py  scheduler_events.py  sessions.py  tool_references.py
console/server/models/: __init__.py  agent_config.py  agent_options.py  chat.py  metrics.py  runtime_config.py  scheduler_control.py  scheduler_state.py  session.py  step_run.py  stream.py  tool_reference.py  trace.py  view.py
console/server/routers/: agents.py  chat.py  config.py  consent.py  feishu.py  overview.py  scheduler.py  scheduler_chat.py  scheduler_control.py  sessions.py  traces.py
console/server/serialization/: __init__.py  agent.py  scheduler.py
console/server/services/: README.md  __init__.py  agent_builder.py  agent_lifecycle.py  agent_registry.py  agent_registry_memory_store.py  agent_registry_models.py  agent_registry_mongo_store.py  agent_registry_sqlite_store.py  agent_registry_store.py  bash_permission_builder.py  chat_sse.py  consent_manager.py  consent_notifier_injection.py  conversation_sse.py  metrics.py  notifying_trace_storage.py  remote_workspace_conversation.py  remote_workspace_session.py  run_metrics.py  runtime_config.py  scheduler_conversation_sse.py  scheduler_state_metrics.py  session_summary.py  storage_manager.py  storage_wiring.py  streaming_consent_notifier.py  task_projection.py
console/server/services/agent_registry/: __init__.py  defaults.py  models.py  registry.py
console/server/services/agent_registry/store/: __init__.py  memory.py  mongo.py  sqlite.py
console/server/services/runtime/: __init__.py  agent_factory.py  agent_runtime_cache.py  run_query_service.py  runtime_observability.py  scheduler_tree_view_service.py  session_runtime_service.py  session_service.py  session_view_service.py  trace_query_service.py
console/server/services/session_store/: __init__.py  base.py  memory.py  sqlite.py
console/server/services/tool_catalog/: __init__.py  tool_builder.py  tool_catalog.py
console/tests/: test_agent_registry_store.py  test_agent_runtime_components.py  test_agents_api.py  test_app_smoke.py  test_channel_consistency.py  test_channel_exceptions.py  test_chat_api.py  test_cli.py  test_config_env.py  test_docker_runtime.py  test_feishu_channel_store.py  test_feishu_commands.py  test_feishu_commands_workspace.py  test_feishu_service_components.py  test_message_chunking.py  test_models.py  test_overview_api.py  test_remote_workspace_conversation_service.py  test_remote_workspace_session_service.py  test_response_serialization.py  test_run_metrics.py  test_run_query_service.py  test_runtime_config_api.py  test_runtime_observability.py  test_runtime_replay_consistency.py  test_scheduler_api.py  test_scheduler_chat_api.py  test_session_binding.py  test_session_summary.py  test_sessions_api.py  test_storage_config.py  test_task_projection.py  test_traces_api.py
console/web/: .impeccable.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
console/web/src/app/: globals.css  layout.tsx  page.tsx
console/web/src/app/agents/: page.test.tsx  page.tsx
console/web/src/app/scheduler/: page.tsx
console/web/src/app/sessions/: page.tsx
console/web/src/app/settings/: page.tsx
console/web/src/app/traces/: page.tsx
console/web/src/components/: agent-form.tsx  back-header.tsx  chat-input-bar.tsx  chat-message.tsx  copy-button.tsx  json-disclosure.test.tsx  json-disclosure.tsx  metric-card.tsx  mono-text.tsx  pagination-controls.tsx  pill-badge.tsx  scheduler-status-badge.tsx  section-card.tsx  sidebar.tsx  state-message.tsx  step-content-preview.tsx  token-metrics-badges.tsx  token-summary-cards.tsx  trace-status-badge.tsx  user-input-detail.tsx
console/web/src/components/scheduler-tree/: node-inspector.tsx  root-actions.tsx  scheduler-tree-workspace.test.tsx  (+2 more)
console/web/src/hooks/: use-chat-stream.test.tsx  use-chat-stream.ts  use-page-visibility.ts
console/web/src/lib/: api.test.ts  api.ts  chat-types.test.ts  chat-types.ts  insights.ts  metrics.ts  scheduler-run-result.test.ts  scheduler-run-result.ts  scheduler-tree.test.ts  scheduler-tree.ts  time.ts  wake-condition.ts
console/web/src/test/: render.tsx  setup.ts
(+760 files in other folders)
