[project]
name = "agiwo"
version = "0.1.0"
description = "AGIWO - AI Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.11.6",
    "motor>=3.7.1",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "aiosqlite>=0.22.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "boto3>=1.42.59",
    "aiofiles>=25.1.0",
    "curl-cffi>=0.14.0",
    "lark-oapi>=1.5.3",
    "bs4>=0.0.2",
    "trafilatura>=2.0.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.15.5",
    "import-linter>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agiwo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.15.5",
    "import-linter>=2.4.0",
]

[tool.ruff]
target-version = "py311"
src = ["agiwo", "console/server", "tests", "console/tests", "scripts"]
extend-exclude = ["trash"]

[tool.ruff.lint]
select = [
    "F",
    "E9",
    "B006",
    "BLE001",
    "B904",
    "PLC0415",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0915",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
