[project]
name = "agiwo-console"
version = "0.1.0"
description = "Agiwo Agent SDK Control Plane Dashboard"
requires-python = ">=3.10"
dependencies = [
    "agiwo ~= 0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx[socks]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "aiosqlite>=0.22.1",
    "motor>=3.7.1",
    "bs4>=0.0.2",
    "trafilatura>=2.0.0",
    "lark-oapi>=1.5.3",
    "sqlite-vec>=0.1.6",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agiwo-console = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"Dockerfile" = "server/_assets/docker/Dockerfile"
"docker" = "server/_assets/docker"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
agiwo = { path = "..", editable = true }
